build(config): split into multiple gradle configs